--- a/starField.html
+++ b/starField.html
@@ -21,7 +21,24 @@
 
         form {
             display: flex;
+            flex-direction: column;
             align-items: center;
+        }
+
+        .row {
+            display: flex;
+            align-items: center;
+        }
+        label{
+            width: 5em;
+            text-align: right;
+        }
+        input[type=range] {
+            margin-left: 5px;
+            margin-right: 5px;
+        }
+        input[type=number] {
+            width: 5em;
         }
     </style>
 </head>
@@ -29,9 +46,11 @@
 <body>
     <h1>Star field generatior</h1>
     <form>
-        <label for="speed">Speed</label>
-        <input type="number" min="0" max="10" value="2" id="speed" onchange="setSpeed(speed.value)">
-        <input type="range" min="0" max="10" value="2" id="speed_range" onchange="setSpeed(speed_range.value)">
+        <div class="row">
+            <label for="speed">Speed</label>
+            <input type="range" min="0" max="10" value="2" id="speed_range" onchange="setSpeed(speed_range.value)">
+            <input type="number" min="0" max="10" value="2" id="speed" onchange="setSpeed(speed.value)">
+        </div>
 
     </form>
     <canvas id="mainCanvas" height="800" width="1200"></canvas>
