--- a/starField.html
+++ b/starField.html
@@ -29,14 +29,17 @@
             display: flex;
             align-items: center;
         }
-        label{
+
+        label {
             width: 5em;
             text-align: right;
         }
+
         input[type=range] {
             margin-left: 5px;
             margin-right: 5px;
         }
+
         input[type=number] {
             width: 5em;
         }
@@ -53,8 +56,9 @@
         </div>
         <div class="row">
             <label for="stars">Stars</label>
-            <input type="range" min="0" max="10000" value="2" id="stars_range" onchange="setStars(stars_range.value)">
-            <input type="number" min="0" max="10000" value="2" id="stars" onchange="setStars(stars.value)">
+            <input type="range" min="5" max="13" step="0.001" value="10" id="stars_range"
+                onchange="setStars(Math.round(2**stars_range.value))">
+            <input type="number" min="32" max="8192" value="1024" id="stars" onchange="setStars(stars.value)">
         </div>
 
     </form>
@@ -131,9 +135,9 @@
         const OLD_NUMBER_STARS = NUMBER_STARS;
         NUMBER_STARS = Number(val);
         stars.value = NUMBER_STARS;
-        stars_range.value = NUMBER_STARS;
+        stars_range.value = Math.round(Math.log2(NUMBER_STARS));
         if (NUMBER_STARS > OLD_NUMBER_STARS) {
-            for (var i = 0; i < NUMBER_STARS-OLD_NUMBER_STARS; i++) {
+            for (var i = 0; i < NUMBER_STARS - OLD_NUMBER_STARS; i++) {
                 STARS.push({
                     x: map(Math.random(), 0, 1, -100, 100),
                     y: map(Math.random(), 0, 1, -100, 100),
@@ -141,8 +145,7 @@
                 })
             }
         } else {
-            for (var i = 0; i < OLD_NUMBER_STARS-NUMBER_STARS; i++) {
-                // delete one star
+            for (var i = 0; i < OLD_NUMBER_STARS - NUMBER_STARS; i++) {
                 STARS.shift()
             }
         }
