--- a/starField.html
+++ b/starField.html
@@ -38,10 +38,20 @@
         input[type=range] {
             margin-left: 5px;
             margin-right: 5px;
+            margin-bottom: 5px;
         }
 
         input[type=number] {
             width: 5em;
+        }
+
+        input[type=button] {
+            margin-top: 2px;
+            margin-bottom: 2px;
+        }
+
+        video {
+            display: none;
         }
     </style>
 </head>
@@ -79,10 +89,16 @@
         <div class="row">
             <input type="button" value="Animate" id="animateON" onclick="setAnimateON()" disabled>
             <input type="button" value="Stop" id="animateOFF" onclick="setAnimateOFF()">
-            <input type="number" min="10" max="1000" value="20" id="animateTime" onchange="setAnimateON()" placeholder="ms/frames">
+            <input type="number" min="10" max="1000" value="20" id="animateTime" onchange="setAnimateON()"
+                placeholder="ms/frames">
+        </div>
+        <div class="row">
+            <input type="button" value="Start recording" id="record" onclick="recording()">
+            <input type="button" value="Download" id="download_button" onclick="download()" disabled>
         </div>
     </form>
     <canvas id="mainCanvas" height="800" width="1200"></canvas>
+    <video id="video_record"></video>
 </body>
 <script>
     var mainContext = mainCanvas.getContext("2d")
@@ -188,6 +204,41 @@
         INTERVAL = null;
         animateON.disabled = false;
         animateOFF.disabled = true;
+    }
+    var videoStream = mainCanvas.captureStream(30);
+    var mediaRecorder = new MediaRecorder(videoStream);
+    var chunks = [];
+    mediaRecorder.ondataavailable = function (e) {
+        chunks.push(e.data);
+    };
+    mediaRecorder.onstop = function (e) {
+        var blob = new Blob(chunks, { 'type': 'video/webm' });
+        chunks = [];
+        var videoURL = URL.createObjectURL(blob);
+        video_record.src = videoURL;
+    };
+    var RECORDING = false;
+    function recording() {
+        if (RECORDING) {
+            mediaRecorder.stop();
+            record.value = "Start recording";
+            RECORDING = false;
+            download_button.disabled = false;
+        } else {
+            mediaRecorder.start();
+            record.value = "Stop recording";
+            RECORDING = true;
+            download_button.disabled = true;
+        }
+    }
+    function download() {
+        setTimeout(() => {
+            const a = document.createElement("a");
+            a.href = video_record.src;
+            a.download = "recording.webm";
+            a.click();
+            URL.revokeObjectURL(url);
+        }, 0);
     }
 </script>
 
