--- a/starField.html
+++ b/starField.html
@@ -15,7 +15,7 @@
 
         canvas {
             border: 1px black solid;
-            width: 100%;
+            max-width: 100%;
             max-height: 100%;
         }
 
