--- a/MandelbrotSet2D.html
+++ b/MandelbrotSet2D.html
@@ -30,9 +30,9 @@
     <h1>Mandelbrot Set</h1>
     <form>
         <div class="row">
-            <label for="center_x">Center x:</label>
-            <input type="range" min="-2" max="2" step="0.01" value="0" id="center_x_range" onchange="setCenterX(center_x_range.value)">
-            <input type="number" min="-2" max="2" step="0.01" value="0" id="center_x" onchange="setCenterX(center_x.value)">
+            <label for="center_x">Center <math><mi>x</mi></math></label>
+            <input type="range" min="-2" max="1" step="0.01" value="-0.5" id="center_x_range" onchange="setCenterX(center_x_range.value)">
+            <input type="number" min="-2" max="1" step="0.01" value="-0.5" id="center_x" onchange="setCenterX(center_x.value)">
         </div>
     </form>
     <canvas id="mainCanvas" height="512" width="512"></canvas>
