--- a/MandelbrotSet2D.html
+++ b/MandelbrotSet2D.html
@@ -34,6 +34,11 @@
             <input type="range" min="-2" max="1" step="0.01" value="-0.5" id="center_x_range" onchange="setCenterX(center_x_range.value)">
             <input type="number" min="-2" max="1" step="0.01" value="-0.5" id="center_x" onchange="setCenterX(center_x.value)">
         </div>
+        <div class="row">
+            <label for="center_y">Center <math><mi>y</mi></math></label>
+            <input type="range" min="-1" max="1" step="0.01" value="0" id="center_y_range" onchange="setCenterY(center_y_range.value)">
+            <input type="number" min="-1" max="1" step="0.01" value="0" id="center_y" onchange="setCenterY(center_y.value)">
+        </div>
     </form>
     <canvas id="mainCanvas" height="512" width="512"></canvas>
 </body>
@@ -111,6 +116,18 @@
         };
         center_x.value = CENTER.x;
         center_x_range.value = CENTER.x;
+        draw(mainCanvas, mainContext);
+    }
+    function setCenterY(val) {
+        CENTER.y = Number(val);
+        INTERVAL = {
+            minx: CENTER.x - INTERVAL_SIZE,
+            maxx: CENTER.x + INTERVAL_SIZE,
+            miny: CENTER.y - INTERVAL_SIZE,
+            maxy: CENTER.y + INTERVAL_SIZE,
+        };
+        center_y.value = CENTER.y;
+        center_y_range.value = CENTER.y;
         draw(mainCanvas, mainContext);
     }
 
