--- a/MandelbrotSet2D.html
+++ b/MandelbrotSet2D.html
@@ -51,6 +51,12 @@
             <input type="range" min="-7" max="2" step="0.01" value="1" id="interval_size_range" onchange="setIntervalSize(2**interval_size_range.value)">
             <input type="number" min="0.01" max="4" step="0.01" value="2" id="interval_size" onchange="setIntervalSize(interval_size.value)">
         </div>
+        
+        <div class="row">
+            <label for="iterations">Iterations</label>
+            <input type="range" min="1" max="1000" step="1" value="100" id="iterations_range" onchange="setIterations(iterations_range.value)">
+            <input type="number" min="1" max="1000" step="1" value="100" id="iterations" onchange="setIterations(iterations.value)">
+        </div>
     </form>
     <canvas id="mainCanvas" height="512" width="512"></canvas>
 </body>
@@ -152,6 +158,12 @@
         };
         interval_size.value = INTERVAL_SIZE;
         interval_size_range.value = Math.log2(INTERVAL_SIZE);
+        draw(mainCanvas, mainContext);
+    }
+    function setIterations(val){
+        ITERATIONS = Number(val);
+        iterations.value = ITERATIONS;
+        iterations_range.value = ITERATIONS;
         draw(mainCanvas, mainContext);
     }
 
