--- a/MandelbrotSet2D.html
+++ b/MandelbrotSet2D.html
@@ -24,8 +24,8 @@
             align-items: center;
         }
 
-        label{
-            width: 4em;
+        label {
+            width: 5em;
             text-align: right;
             margin-right: 5px;
         }
@@ -36,22 +36,31 @@
     <h1>Mandelbrot Set</h1>
     <form>
         <div class="row">
-            <label for="center_x">Center <math><mi>x</mi></math></label>
-            <input type="range" min="-2" max="1" step="0.01" value="-0.7" id="center_x_range" onchange="setCenterX(center_x_range.value)">
-            <input type="number" min="-2" max="1" step="0.01" value="-0.7" id="center_x" onchange="setCenterX(center_x.value)">
+            <label for="center_x">Center <math>
+                    <mi>x</mi>
+                </math></label>
+            <input type="range" min="-2" max="1" step="0.01" value="-0.7" id="center_x_range"
+                onchange="setCenterX(center_x_range.value)">
+            <input type="number" min="-2" max="1" step="0.01" value="-0.7" id="center_x"
+                onchange="setCenterX(center_x.value)">
         </div>
         <div class="row">
-            <label for="center_y">Center <math><mi>y</mi></math></label>
-            <input type="range" min="-1" max="1" step="0.01" value="0" id="center_y_range" onchange="setCenterY(center_y_range.value)">
-            <input type="number" min="-1" max="1" step="0.01" value="0" id="center_y" onchange="setCenterY(center_y.value)">
+            <label for="center_y">Center <math>
+                    <mi>y</mi>
+                </math></label>
+            <input type="range" min="-1" max="1" step="0.01" value="0" id="center_y_range"
+                onchange="setCenterY(center_y_range.value)">
+            <input type="number" min="-1" max="1" step="0.01" value="0" id="center_y"
+                onchange="setCenterY(center_y.value)">
         </div>
-        
         <div class="row">
             <label for="interval_size">Range</label>
-            <input type="range" min="-7" max="2" step="0.01" value="1" id="interval_size_range" onchange="setIntervalSize(2**interval_size_range.value)">
-            <input type="number" min="0.01" max="4" step="0.01" value="2" id="interval_size" onchange="setIntervalSize(interval_size.value)">
+            <input type="range" min="-7" max="2" step="0.01" value="1" id="interval_size_range"
+                onchange="setIntervalSize(2**interval_size_range.value)">
+            <input type="number" min="0.01" max="4" step="0.01" value="2" id="interval_size"
+                onchange="setIntervalSize(interval_size.value)">
         </div>
-        
+
         <div class="row">
             <label for="iterations">Iterations</label>
             <input type="range" min="1" max="1000" step="1" value="100" id="iterations_range"
@@ -169,7 +178,7 @@
         interval_size_range.value = Math.log2(INTERVAL_SIZE);
         draw(mainCanvas, mainContext);
     }
-    function setIterations(val){
+    function setIterations(val) {
         ITERATIONS = Number(val);
         iterations.value = ITERATIONS;
         iterations_range.value = ITERATIONS;
