better form style

--- a/MandelbrotSet2D.html
+++ b/MandelbrotSet2D.html
@@ -13,6 +13,12 @@
             margin: 0;
         }
 
+        form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
         canvas {
             border: 1px black solid;
             max-width: 100%;
@@ -28,6 +34,12 @@
             width: 5em;
             text-align: right;
             margin-right: 5px;
+        }
+        input[type=number]{
+            width: 4em;
+        }
+        input[type=button]{
+            margin: 0.5em;
         }
     </style>
 </head>
