--- a/MandelbrotSet2D.html
+++ b/MandelbrotSet2D.html
@@ -117,6 +117,14 @@
         mainContext = mainCanvas.getContext("2d")
     }
     init();
+    function hexToRgb(hex) {
+        var result = /^#?([a-f\d]{2})([a-f\d]{2})([a-f\d]{2})$/i.exec(hex);
+        return result ? {
+            r: parseInt(result[1], 16),
+            g: parseInt(result[2], 16),
+            b: parseInt(result[3], 16)
+        } : null;
+    }
     function draw(canvas, ctx) {
         const currentImageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
         const newImageData = ctx.createImageData(currentImageData);
