--- a/MandelbrotSet2D.html
+++ b/MandelbrotSet2D.html
@@ -90,8 +90,20 @@
                 onchange="setDivergenceThreshold(divergence_threshold.value)">
         </div>
         <div class="row">
-            <label for="binary">Binary</label>
-            <input type="checkbox" id="binary" onchange="draw(mainCanvas, mainContext)">
+            <label for="background">Background</label>
+            <input type="checkbox" id="background" checked onchange="draw(mainCanvas, mainContext)">
+            <input type="color" value="#ffffff" id="background_color1" onchange="draw(mainCanvas, mainContext)">
+            <input type="color" value="#000000" id="background_color2" onchange="draw(mainCanvas, mainContext)">
+            <input type="checkbox" id="gradient" onchange="draw(mainCanvas, mainContext)">
+            <label for="gradient" style="text-align: left;">Gradient</label>
+        </div>
+
+        <div class="row">
+            <label for="foreground">Foreground</label>
+            <input type="checkbox" id="foreground" checked onchange="draw(mainCanvas, mainContext)">
+            <input type="color" value="#000000" id="foreground_color" onchange="draw(mainCanvas, mainContext)">
+        </div>
+        <div class="row">
             <input type="button" value="Download" onclick="download()">
         </div>
     </form>
@@ -151,23 +163,30 @@
                 iter++;
             }
             if (iter == ITERATIONS) {
-                data[i + 0] = 0;
-                data[i + 1] = 0;
-                data[i + 2] = 0;
-                data[i + 3] = 255;
+                if (foreground.checked) {
+                    var c = hexToRgb(foreground_color.value);
+                    data[i + 0] = c.r;
+                    data[i + 1] = c.g;
+                    data[i + 2] = c.b;
+                    data[i + 3] = 255;
+
+                }
             } else {
-                if (binary.checked) {
-                    data[i + 0] = 255;
-                    data[i + 1] = 255;
-                    data[i + 2] = 255;
+                if (!gradient.checked) {
+                    var c = hexToRgb(background_color1.value);
+                    data[i + 0] = c.r;
+                    data[i + 1] = c.g;
+                    data[i + 2] = c.b;
                     data[i + 3] = 255;
                 } else {
+                    var c1 = hexToRgb(background_color1.value);
+                    var c2 = hexToRgb(background_color2.value);
                     // const divergence = map(iter, 0, ITERATIONS, 0,1);
                     // const color = map(Math.sqrt(divergence), 0, 1, 0,255);
-                    const color = map(iter, 0, ITERATIONS, 0, 255);
-                    data[i + 0] = color;
-                    data[i + 1] = color;
-                    data[i + 2] = color;
+                    const v = map(iter, 0, ITERATIONS, 0, 1);
+                    data[i + 0] = map(v, 0, 1, c1.r, c2.r);
+                    data[i + 1] = map(v, 0, 1, c1.g, c2.g);
+                    data[i + 2] = map(v, 0, 1, c1.b, c2.b);
                     data[i + 3] = 255;
 
                 }
