--- a/MandelbrotSet2D.html
+++ b/MandelbrotSet2D.html
@@ -91,17 +91,17 @@
         </div>
         <div class="row">
             <label for="background">Background</label>
-            <input type="checkbox" id="background" checked onchange="draw(mainCanvas, mainContext)">
-            <input type="color" value="#ffffff" id="background_color1" onchange="draw(mainCanvas, mainContext)">
-            <input type="color" value="#000000" id="background_color2" onchange="draw(mainCanvas, mainContext)">
-            <input type="checkbox" id="gradient" onchange="draw(mainCanvas, mainContext)">
+            <input type="checkbox" id="background" checked onchange="draw_main()">
+            <input type="color" value="#ffffff" id="background_color1" onchange="draw_main()">
+            <input type="color" value="#000000" id="background_color2" onchange="draw_main()">
+            <input type="checkbox" id="gradient" onchange="draw_main()">
             <label for="gradient" style="text-align: left;">Gradient</label>
         </div>
 
         <div class="row">
             <label for="foreground">Foreground</label>
-            <input type="checkbox" id="foreground" checked onchange="draw(mainCanvas, mainContext)">
-            <input type="color" value="#000000" id="foreground_color" onchange="draw(mainCanvas, mainContext)">
+            <input type="checkbox" id="foreground" checked onchange="draw_main()">
+            <input type="color" value="#000000" id="foreground_color" onchange="draw_main()">
         </div>
         <div class="row">
             <input type="button" value="Download" onclick="download()">
@@ -120,7 +120,8 @@
         maxy: CENTER.y + INTERVAL_SIZE,
     };
     var DIVERGENCE_THRESHOLD = 16;
-    var ITERATIONS = 100
+    var ITERATIONS = 100;
+    var DATA = [];
     var mainContext = null;
     function map(v, minx, maxx, miny, maxy) {
         return ((v - minx) * ((maxy - miny) / (maxx - minx))) + miny;
@@ -137,10 +138,10 @@
             b: parseInt(result[3], 16)
         } : null;
     }
-    function draw(canvas, ctx) {
+    function compute(canvas, ctx) {
+        DATA = [];
         const currentImageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-        const newImageData = ctx.createImageData(currentImageData);
-        const data = newImageData.data;
+        const data = currentImageData.data;
         for (var i = 0; i < data.length; i += 4) {
             const x = (i / 4) % canvas.width;
             const y = ((i / 4) - x) / canvas.height;
@@ -162,39 +163,51 @@
                 }
                 iter++;
             }
+            DATA.push(iter)
+        }
+    }
+    function compute_main() {
+        compute(mainCanvas, mainContext);
+    }
+    compute_main();
+
+    function draw(canvas, ctx) {
+        const newImageData = ctx.createImageData(canvas.width, canvas.height);
+        const data = newImageData.data;
+        const fg = hexToRgb(foreground_color.value);
+        const bg1 = hexToRgb(background_color1.value);
+        const bg2 = hexToRgb(background_color2.value);
+        for (var i = 0; i < data.length; i++) {
+            var iter = DATA[i]
             if (iter == ITERATIONS) {
                 if (foreground.checked) {
-                    var c = hexToRgb(foreground_color.value);
-                    data[i + 0] = c.r;
-                    data[i + 1] = c.g;
-                    data[i + 2] = c.b;
-                    data[i + 3] = 255;
-
+                    data[4 * i + 0] = fg.r;
+                    data[4 * i + 1] = fg.g;
+                    data[4 * i + 2] = fg.b;
+                    data[4 * i + 3] = 255;
                 }
             } else {
                 if (!gradient.checked) {
-                    var c = hexToRgb(background_color1.value);
-                    data[i + 0] = c.r;
-                    data[i + 1] = c.g;
-                    data[i + 2] = c.b;
-                    data[i + 3] = 255;
+                    data[4 * i + 0] = bg1.r;
+                    data[4 * i + 1] = bg1.g;
+                    data[4 * i + 2] = bg1.b;
+                    data[4 * i + 3] = 255;
                 } else {
-                    var c1 = hexToRgb(background_color1.value);
-                    var c2 = hexToRgb(background_color2.value);
-                    // const divergence = map(iter, 0, ITERATIONS, 0,1);
-                    // const color = map(Math.sqrt(divergence), 0, 1, 0,255);
                     const v = map(iter, 0, ITERATIONS, 0, 1);
-                    data[i + 0] = map(v, 0, 1, c1.r, c2.r);
-                    data[i + 1] = map(v, 0, 1, c1.g, c2.g);
-                    data[i + 2] = map(v, 0, 1, c1.b, c2.b);
-                    data[i + 3] = 255;
+                    data[4 * i + 0] = map(v, 0, 1, bg2.r, bg1.r);
+                    data[4 * i + 1] = map(v, 0, 1, bg2.g, bg1.g);
+                    data[4 * i + 2] = map(v, 0, 1, bg2.b, bg1.b);
+                    data[4 * i + 3] = 255;
 
                 }
             }
         }
         ctx.putImageData(newImageData, 0, 0);
     }
-    draw(mainCanvas, mainContext)
+    function draw_main() {
+        draw(mainCanvas, mainContext);
+    }
+    draw_main();
 
     function setCenterX(val) {
         CENTER.x = Number(val);
@@ -206,7 +219,8 @@
         };
         center_x.value = CENTER.x;
         center_x_range.value = CENTER.x;
-        draw(mainCanvas, mainContext);
+        compute_main();
+        draw_main();
     }
     function setCenterY(val) {
         CENTER.y = Number(val);
@@ -218,7 +232,8 @@
         };
         center_y.value = CENTER.y;
         center_y_range.value = CENTER.y;
-        draw(mainCanvas, mainContext);
+        compute_main();
+        draw_main();
     }
     function setIntervalSize(val) {
         INTERVAL_SIZE = Number(val);
@@ -230,19 +245,22 @@
         };
         interval_size.value = INTERVAL_SIZE;
         interval_size_range.value = Math.log2(INTERVAL_SIZE);
-        draw(mainCanvas, mainContext);
+        compute_main();
+        draw_main();
     }
     function setIterations(val) {
         ITERATIONS = Number(val);
         iterations.value = ITERATIONS;
         iterations_range.value = ITERATIONS;
-        draw(mainCanvas, mainContext);
+        compute_main();
+        draw_main();
     }
     function setDivergenceThreshold(val) {
         DIVERGENCE_THRESHOLD = Number(val);
         divergence_threshold.value = DIVERGENCE_THRESHOLD;
         divergence_threshold_range.value = DIVERGENCE_THRESHOLD;
-        draw(mainCanvas, mainContext);
+        compute_main();
+        draw_main();
     }
 
     function download() {
